[gd_scene load_steps=3 format=3 uid="uid://6o5mduol2qpi"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_duqqe"]
[ext_resource type="Script" path="res://scripts/Background.gd" id="2_k5d4s"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_duqqe")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 4.0
offset_right = 1281.0
offset_bottom = 722.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_k5d4s")

[node name="TitleContainer" type="Control" parent="."]
custom_minimum_size = Vector2(200, 20)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 600.0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 0
offset_left = -599.0
offset_top = 12.0
offset_right = 682.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 64
text = "Recess Rangers"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 0
offset_left = -598.0
offset_top = 83.0
offset_right = 682.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 32
text = "Tucson Tales"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 475.0
offset_top = 200.0
offset_right = 675.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.705, 1.705)
alignment = 1

[node name="PlayButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Start Adventure!"

[node name="OptionsButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Exit"

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1164.0
offset_top = 665.0
offset_right = 1273.0
offset_bottom = 714.0
grow_horizontal = 2
grow_vertical = 2
text = "v0.1
Michael Galde"
horizontal_alignment = 2
vertical_alignment = 2

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
